@@ -159,7 +159,7 @@ RT_EXPORT extern void rt_nurb_mesh_diff(int order, const fastf_t *o_pts,
 
 /* nurb_eval.c */
 RT_EXPORT extern void nmg_nurb_s_eval(const struct face_g_snurb *srf, fastf_t u, fastf_t v, fastf_t * final_value);
-RT_EXPORT extern void rt_nurb_c_eval(const struct edge_g_cnurb *crv, fastf_t param, fastf_t * final_value);
+RT_EXPORT extern void nmg_nurb_c_eval(const struct edge_g_cnurb *crv, fastf_t param, fastf_t * final_value);
 RT_EXPORT extern fastf_t *rt_nurb_eval_crv(fastf_t *crv, int order,
 						fastf_t param,
 						const struct knot_vector *k_vec, int k_index, int coords);
@@ -175,9 +175,9 @@ RT_EXPORT extern void rt_nurb_kvknot(struct knot_vector *new_knots, int order,
 RT_EXPORT extern void rt_nurb_kvmult(struct knot_vector *new_kv,
 					  const struct knot_vector *kv,
 					  int num, fastf_t val, struct resource *res);
-RT_EXPORT extern void rt_nurb_kvgen(struct knot_vector *kv,
+RT_EXPORT extern void nmg_nurb_kvgen(struct knot_vector *kv,
 					 fastf_t lower, fastf_t upper, int num, struct resource *res);
-RT_EXPORT extern void rt_nurb_kvmerge(struct knot_vector *new_knots,
+RT_EXPORT extern void nmg_nurb_kvmerge(struct knot_vector *new_knots,
 					   const struct knot_vector *kv1,
 					   const struct knot_vector *kv2, struct resource *res);
 RT_EXPORT extern int rt_nurb_kvcheck(fastf_t val, const struct knot_vector *kv);
@@ -225,7 +225,7 @@ RT_EXPORT extern struct nmg_nurb_uv_hit *nmg_nurb_intersect(const struct face_g_
 							       plane_t plane1, plane_t plane2, double uv_tol, struct resource *res, struct bu_list *plist);
 
 /* nurb_refine.c */
-RT_EXPORT extern struct face_g_snurb *rt_nurb_s_refine(const struct face_g_snurb *srf,
+RT_EXPORT extern struct face_g_snurb *nmg_nurb_s_refine(const struct face_g_snurb *srf,
 							    int dir, struct knot_vector *kv, struct resource *res);
 RT_EXPORT extern struct edge_g_cnurb *rt_nurb_c_refine(const struct edge_g_cnurb * crv,
 							    struct knot_vector *kv);
@@ -257,8 +257,8 @@ RT_EXPORT extern struct edge_g_cnurb *nmg_nurb_new_cnurb(int order, int n_knots,
 							     int n_pts, int pt_type);
 RT_EXPORT extern void nmg_nurb_free_snurb(struct face_g_snurb *srf, struct resource *res);
 RT_EXPORT extern void nmg_nurb_free_cnurb(struct edge_g_cnurb * crv);
-RT_EXPORT extern void rt_nurb_c_print(const struct edge_g_cnurb *crv);
-RT_EXPORT extern void rt_nurb_s_print(char *c, const struct face_g_snurb *srf);
+RT_EXPORT extern void nmg_nurb_c_print(const struct edge_g_cnurb *crv);
+RT_EXPORT extern void nmg_nurb_s_print(char *c, const struct face_g_snurb *srf);
 RT_EXPORT extern void rt_nurb_pr_kv(const struct knot_vector *kv);
 RT_EXPORT extern void rt_nurb_pr_mesh(const struct face_g_snurb *m);
 RT_EXPORT extern void rt_nurb_print_pt_type(int c);
